# bayesiansurprise

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
examples/: canadian_census_pycancensus.py  us_census_census.py
src/bayesiansurprise/: __init__.py  _core.py  _models.py  _plotting.py  _utils.py
tests/: test_core.py  test_examples_compile.py  test_geopandas_plotting.py  test_models.py  test_paper_validation.py  test_r_cross_validation.py  test_utils.py
tests/fixtures/: r_reference.json
tools/: generate_r_reference.R
