[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesiansurprise"
version = "0.1.0"
description = "Bayesian Surprise for model-based thematic map diagnostics"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Dmitry Shkolnik", email = "shkolnikd@gmail.com" },
]
keywords = ["bayesian", "surprise", "maps", "spatial", "statistics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
]
geo = [
  "geopandas>=0.13",
]
canada = [
  "pycancensus>=0.1.0",
  "geopandas>=0.13",
]
us = [
  "census>=0.8.26",
  "us>=3.2",
  "geopandas>=0.13",
]

[project.urls]
Homepage = "https://github.com/dshkol/bayesiansurprise"
Repository = "https://github.com/dshkol/bayesiansurprise"
Issues = "https://github.com/dshkol/bayesiansurprise/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
