[metadata]
name = bayesiansurprise
version = 0.1.0
description = Bayesian Surprise for model-based thematic map diagnostics
long_description = file: README.md
long_description_content_type = text/markdown
author = Dmitry Shkolnik
author_email = shkolnikd@gmail.com
license = MIT
url = https://github.com/dshkol/bayesiansurprise
project_urls =
    Issues = https://github.com/dshkol/bayesiansurprise/issues
    Repository = https://github.com/dshkol/bayesiansurprise
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.23
    pandas>=1.5
    scipy>=1.9

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7
    pytest-cov>=4
geo =
    geopandas>=0.13
canada =
    pycancensus>=0.1.0
    geopandas>=0.13
us =
    census>=0.8.26
    us>=3.2
    geopandas>=0.13
